<resources>
    <string name="app_name">Mod1Class3</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="texto_uno">Ingrese Texto Uno</string>
    <string name="texto_dos">Ingrese Texto Dos</string>
    <string name="texto_tres">Ingrese Texto Tres</string>
    <string name="tiempo">Ingrese Tiempo</string>
    <string name="mostrar">Mostrar Cancelar</string>
    <string name="grabar">Grabar</string>
    <string name="listado">Listado</string>
    <string name="modificar">Modificar</string>
    <string name="seleccione">Seleccione opción</string>
</resources>
