<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/txtTextoUno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_uno" />

    <EditText
        android:id="@+id/txtTextoDos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_dos" />

    <EditText
        android:id="@+id/txtTextoTres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_tres" />

    <EditText
        android:id="@+id/txtTiempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tiempo" />

    <CheckBox
        android:id="@+id/cbMostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar" />

    <Button
        android:id="@+id/btnGrabar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grabar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnListado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="@string/listado" />
    </FrameLayout>
</LinearLayout>